# Intelligent-Quiz-Management-System2

./: .env  .gitignore  README.md  db.sqlite3  list_gemini_models.py  manage.py  pyproject.toml  requirements.txt
Intelligent_Quiz/: asgi.py  db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
Intelligent_Quiz/Intelligent_Quiz/: asgi.py  settings.py  urls.py  wsgi.py
Intelligent_Quiz/static/css/: style.css
Intelligent_Quiz/templates/: base.html  categories.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
Intelligent_Quiz/templates/users/: home.html  login.html  profile.html  register.html
Intelligent_Quiz/users/: forms.py  models.py  signals.py  urls.py  views.py
Intelligent_Quiz/users/migrations/: 0001_initial.py  0002_remove_profile_preferences_profile_bio_and_more.py  0003_alter_profile_avatar.py
quizzes/: admin.py  ai_utils.py  models.py  urls.py  views.py
quizzes/migrations/: 0001_initial.py  0002_quiz_description_quiz_quiz_status_quiz_score_and_more.py  0003_aiquestion.py  0004_rename_selected_option_useranswer_user_answer_and_more.py  0005_useranswer_explanation_useranswer_helpful_feedback.py  0006_questionfeedback.py  0007_useranswer_learning_source_useranswer_reference_link.py  0008_useractivity.py
quizzes/services/: ai_questions.py
static/css/: style.css
templates/: base.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
templates/quizzes/: categories.html  quiz_results.html  quiz_start.html  subcategory_selection.html
templates/users/: dashboard.html  help.html  history.html  home.html  login.html  profile.html  register.html  review_quiz.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_profile_preferences_profile_bio_and_more.py  0003_alter_profile_avatar.py
