[tool.poetry]
name = "intelligent-quiz"
version = "0.1.0"
description = "Intelligent Quiz Management System"
authors = ["Dharani Bellapu <dharani@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
annotated-types = "0.7.0"
anyio = "3.7.1"
asgiref = "3.10.0"
blinker = "1.9.0"
cachetools = "6.2.2"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.3.1"
colorama = "0.4.6"
contourpy = "1.2.1"
cycler = "0.12.1"
distro = "1.9.0"
Django = "^4.2.16"
django-allauth = "65.13.0"
django-crispy-forms = "2.0"
django-htmx = "1.16.0"
djangorestframework = "3.16.1"
Flask = "3.1.3"
fonttools = "4.53.1"
google-ai-generativelanguage = "0.6.15"
google-api-core = "2.28.1"
google-api-python-client = "2.187.0"
google-auth = "2.43.0"
google-auth-httplib2 = "0.2.1"
google-generativeai = "0.8.5"
googleapis-common-protos = "1.72.0"
grpcio = "1.76.0"
grpcio-status = "1.71.2"
h11 = "0.16.0"
httpcore = "1.0.9"
httplib2 = "0.31.0"
httpx = "0.28.1"
idna = "3.7"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
jiter = "0.11.1"
joblib = "1.5.2"
kiwisolver = "1.4.5"
MarkupSafe = "3.0.3"
matplotlib = "3.9.1.post1"
mlxtend = "0.23.4"
numpy = "2.0.1"
openai = "1.3.0"
packaging = "24.1"
pandas = "2.2.2"
Pillow = "10.0.1"
proto-plus = "1.26.1"
protobuf = "5.29.5"
psycopg2 = "2.9.11"
psycopg2-binary = "2.9.11"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.2"
pydantic = "2.12.3"
pydantic-core = "2.41.4"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-decouple = "3.8"
python-dotenv = "1.2.1"
pytz = "2024.1"
requests = "2.31.0"
rsa = "4.9.1"
scikit-learn = "1.7.2"
scipy = "1.16.2"
six = "1.16.0"
sniffio = "1.3.1"
sqlparse = "0.5.3"
threadpoolctl = "3.6.0"
tqdm = "4.67.1"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
tzdata = "2024.1"
uritemplate = "4.2.0"
urllib3 = "2.2.2"
uv = "0.9.26"
Werkzeug = "3.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"